# saru-list

./: README.md  meson.build
inc/: saru-dlist.h
src/: dlist.c  main.c  meson.build  saru_list.c
subprojects/: Unity.wrap
test/: dlist.c
tests/: dlist.c  meson.build
